убирает кавычки с почты

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="page-header">
       <div class="container">
-        <a href="antimanton@gmail.com" ="mailto:antimanton@gmail.com">"antimanton@gmail.com"</a>
+        <a href="antimanton@gmail.com" ="mailto:antimanton@gmail.com">antimanton@gmail.com</a>
         <a href="+380952483241" >+380952483241</a>
       </div>
     </header>
